Fixed Report configuration table alignment wrt to SocietyContacts

--- a/components/page-licensor/page-licensor.less
+++ b/components/page-licensor/page-licensor.less
@@ -116,7 +116,7 @@
 
   .col-sm-12.societyContacts {
     height: 100px;
-    width: 99%;
+    width: 98%;
     overflow: hidden;
     padding-right: 0px;
     border-radius: 0 5px 0 0;
